# Real-Time-GDELT-Trends-Analytics

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
airflow/: Dockerfile  pyproject.toml
airflow/dags/: daily_trend_summary_dag.py  models.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  repository.py  schemas.py
docs/: architecture.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
pgadmin/: servers.json
producer/: Dockerfile  README.md  pyproject.toml
producer/app/: main.py  sources.py
producer/producer/: config.py  kafka_client.py  main.py  sources.py
spark/jobs/: trend_streaming_job.py
spark/wordlists/: sentiment_words.json
sql/: init.sql  test_query.sql
