[project]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow DAGs for real-time trend analytics"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-apache-spark==4.11.3",
    "apache-airflow-providers-postgres",
    "toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["dags"]