[project]
name = "trends-backend"
version = "0.1.0"
description = "FastAPI backend for real-time trend analytics"
requires-python = ">=3.11"
dependencies = [
    "asyncpg==0.29.0",
    "fastapi==0.115.0",
    "pydantic-settings==2.5.2",
    "redis==5.0.8",
    "uvicorn[standard]==0.30.6"
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
