[project]
name = "trends-producer"
version = "0.1.0"
description = "Kafka producers for real-time trend analytics"
requires-python = ">=3.11"
dependencies = [
    "aiokafka==0.10.0",
    "httpx==0.27.2",
    "pydantic-settings==2.5.2",
    "python-dateutil==2.9.0.post0",
    "websockets==13.1"
]

[tool.uv]
package = true

[tool.ruff]
src = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
